@@ -1,3 +1,8 @@
+2006-11-27  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/config/_windows.h: Patch from Michael Fink to check
+	inclusion of winbase.h and windows.h.
+
 2006-11-17  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/config/_macosx.h: Add endianess configuration.
